# BaryCenter

./: Cargo.toml  README.md
assets/: default_config.toml
src/: config.rs  frecency.rs  main.rs  search.rs
src/runner/: app.rs  calc.rs  mod.rs  shell.rs  sys.rs
src/ui/: mod.rs  theme.rs
